# ChangeLog for dev-python/cssselect
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cssselect/ChangeLog,v 1.22 2014/01/18 15:57:30 maekke Exp $

  18 Jan 2014; Markus Meier <maekke@gentoo.org> cssselect-0.7.1-r1.ebuild:
  arm stable, bug #450174

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Stable for sparc, wrt bug #450174

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Stable for sh, wrt bug #450174

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Stable for s390, wrt bug #450174

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Stable for ppc, wrt bug #450174

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Stable for ia64, wrt bug #450174

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Stable for x86, wrt bug #450174

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1-r1.ebuild:
  Stable for amd64, wrt bug #450174

*cssselect-0.7.1-r1 (15 Feb 2013)

  15 Feb 2013; Michał Górny <mgorny@gentoo.org> +cssselect-0.7.1-r1.ebuild:
  Migrate to distutils-r1.

  14 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> cssselect-0.7.1.ebuild:
  Stable on x86. Closing bug#439090.

  20 Oct 2012; Agostino Sarubbo <ago@gentoo.org> cssselect-0.7.1.ebuild:
  Stable for amd64, wrt bug #439090

  13 Oct 2012; Raúl Porcel <armin76@gentoo.org> cssselect-0.6.1.ebuild,
  cssselect-0.7.1.ebuild:
  Add ~ia64/~s390/~sh

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> cssselect-0.6.1.ebuild,
  cssselect-0.7.1.ebuild:
  Add ~alpha/~sparc wrt #416099

  22 Jul 2012; Anthony G. Basile <blueness@gentoo.org> cssselect-0.7.1.ebuild:
  Keyword ~ppc ~ppc64 0.7.1 as well, related to bug #383195
