@@ -3,15 +3,17 @@ Hash: SHA256
 
 DIST cssselect-0.6.1.tar.gz 29679 SHA256 b35683a6526e24240606b46caf6f7c154a3c0f4ac4137fd2b073ddcfcb25445f SHA512 55b9a621fcef4f5897ca78c8e9d93ab0fa68af5de9b2bc20d1500e269c1f910c25c723b5eae1c2a1046000b73095895a07649072a4e3c787639d299021fd0367 WHIRLPOOL 2c69852751335b19469ea0e74cd396c9ffc70b64f8e2059e9dbd4a684866aa0b85df76b7d3a33ff816da78aa6f9a75b63bf56e21f430ed19bd4c205419453574
 DIST cssselect-0.7.1.tar.gz 30480 SHA256 74f411a349fcfb676b68336fcae8799ba9fbb0a0446562f544dee019fb0e2ae7 SHA512 e1efcde9ac6e1989114febe8775e1151e402044bfad0e122b090dca7e3bf4c099afe192a721f272aca285a1fd7376b6af4323a3c1471b5d0327398ac5dda5f4e WHIRLPOOL a2c58218bab9e2d4c85333d99481959a6ed5a2bb2b9fb6bba66ac07d35cb6df73d17e18c7f727c09aa9fd5242af7efd8c062d92fb9a3e2356c69cfd0f6ad0760
+DIST cssselect-0.9.1.tar.gz 32952 SHA256 0535a7e27014874b27ae3a4d33e8749e345bdfa62766195208b7996bf1100682 SHA512 c4cd2c8d6fbfa99b836554685dd59e1e794e1fab06fcf4419a226b0608a05d58be5af54e507003f2a233a22f03d59d3d63c0bf19b3314f15c95ab3ce5f4db6cc WHIRLPOOL 0fabe49d4f504069eb782ba98c93a34fa9433fd4d10a545f46f5aa1a5fb3a898580f4e17d744052590e18fe7a0f06feca0527d86ac243282e826caddfb410324
 EBUILD cssselect-0.6.1.ebuild 1129 SHA256 759b47e34b27eeaadcd9b9d66e78a079d3e4e3f6a5eb189131b584848ae75e8b SHA512 faa4310102f862a7724d082720362714b941e1b21d54c087e1251241b1c04150ada6a116d36c6a3b1f71cdfdaac446507eef37cfe7d6928afe75e3f0aa6e6c52 WHIRLPOOL 0551e6ffe0fbc2accd05314496ed48fb26b629ac9f44173dc2cf83b1b65c163a29793cf03c8e149635deb3f56544b7d318794f519e31d11f70022328bb46488a
 EBUILD cssselect-0.7.1-r1.ebuild 1069 SHA256 073559597cfa81ac5a5d83789776bb36e31acd07d5952d2202b7d8ddac053a06 SHA512 72d7dbdf9d3770c960692a9b17111ff3cd97674513732fc2cc3061b804eaa827b58148c2123ec4490b413f1c910307e181255294fc0e110d8bbb445f2ce48882 WHIRLPOOL 07e299adc5c8c0ddf2e38ff3f41f5386b8fa38abb9c301de32ab31efe586dc42c9c6bb430bfeed163272edd14714063f3d708385eaf12fe96592178363e050d1
 EBUILD cssselect-0.7.1.ebuild 1129 SHA256 1ec5bc8857afef3299bf38b395bca55e9e6f517e61dfc408958d238c13452d65 SHA512 7774e89cfe410cf16cd4fa990a53f4529220fb91b2c5dfdf6aa0a2c647bfcc7b7155b3afa7b6c0d0f404e893e3e505c20f023ac7443e19a84b9bd56336b69e8d WHIRLPOOL 2bae7a31d081688481ac236f952fed5c9e89fbbab1ffc3ea47ab0616fa3014c85d37d016c1d141af4ac2ca5b6b506b8484c027116dff261925b25d9703365b48
-MISC ChangeLog 2851 SHA256 9e1e676e6e08aa3b79f71f72f4e867fb91483ac6364a1657a5a287b51968a867 SHA512 7c64259fbba7c7e06c86b11ae9f3f55f18faa5376520db87d9b2f468a380bb3ce8bc164ce63ba84b9ee6b505001a387b6874dbcceb3688b48f445be4addc35cc WHIRLPOOL 2e80f8359052e7961a9d4c7c98c310c8eb73ea28936a948ba32dac95cf9ccdd8cbf6a2ee43b89de8b171422bb97b3ee13769157a03de9efa33cab81d7d2644d0
+EBUILD cssselect-0.9.1.ebuild 1239 SHA256 5c4679b7c3070bfd39b1d5815661d3c9188f960b843f922f8b02ae22a5e1d09e SHA512 d64165517c9b49094e4452a131f6dfafdc48bf44bda4a70ed9a073f84df44b0179a990005c409903ce67aa60cc50d2f3323dcc05cfbb558da1872adf4b295905 WHIRLPOOL 627deb6ee209dd10944eed3b83a948a9c9d5ca79f32384662e011eec875022b8e5e08d41b00fe3640750ee58d303f001bc15ea2c79bd97fc0bb0eaaa1d5226c7
+MISC ChangeLog 2965 SHA256 160e9f3a7d41cf1fe0025f3a0bcd1cf7b0342605a7ffa3150595ac3765359bad SHA512 74190ae959b15216392a5caa46d083ec6bdd48cbe0b4cfa13cf3b5ebd13a0ab5db1f759e7311610a69f60c9f6214081ee1c3d9f5363c0323d00722cc93924709 WHIRLPOOL 0db09a358fc96105eb15b4477c154fe8564063867a749cb82dc4afc304c4ae1299306f5c14a62bc566236c7480a5f6253e5ea430acd656a85a87a196c2ab1113
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLaphcACgkQkKaRLQcq0GIpJQCaApzZZGG3Ocd9XHhztNfRhKwy
-oykAoK1E6FKcd/pnIcxzwZ6yvukTn91K
-=2c3u
+iEYEAREIAAYFAlMq1eMACgkQso7CE7gHKw0J1ACfdDiJfxI1MwajoTEku+kOAnv+
+fT4An3pY0WP8xbS/WwcCVx8JgZFKAxh+
+=nHni
 -----END PGP SIGNATURE-----
